<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/topCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/dark_blue"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginVertical="30dp"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:src="@drawable/img_home"
                android:contentDescription="@string/image_description"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/img_wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topCard"
        android:layout_marginTop="-115dp"
        android:contentDescription="@string/image_description"/>

    <Button
        android:id="@+id/btnFuturePrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.35"
        android:text="@string/btn_future_price"
        android:textColor="@color/white"
        android:background="@drawable/btn_home_style"
        android:layout_marginHorizontal="20dp"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btnBuyCrypto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFuturePrice"
        android:layout_margin="20dp"
        android:text="@string/btn_buy_crypto"
        android:background="@drawable/btn_home_style"
        android:padding="10dp"/>
    <Button
        android:id="@+id/btnPercent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuyCrypto"
        android:layout_margin="20dp"
        android:text="@string/btn_percent_text"
        android:background="@drawable/btn_home_style"
        android:padding="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>