<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PercentActivity"
    android:background="@color/light_blue">

    <androidx.cardview.widget.CardView
        android:id="@+id/titleBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/dark_blue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/percent_title"
            android:textColor="@color/white"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleBox"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        android:layout_margin="20dp"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_percent_display"
                android:textStyle="bold"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/displayPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0%"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/dark_blue"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/formPercent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_input_actual_price"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/etCrypto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/input_custom_styles"
            android:inputType="numberDecimal"
            android:hint="@string/placeholder"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_capitalization"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/etCap"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/input_custom_styles"
            android:inputType="number"
            android:hint="@string/placeholder"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_objetive_price"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/etObjective"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/input_custom_styles"
            android:inputType="numberDecimal"
            android:hint="@string/placeholder"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnCalcPerc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formPercent"
        android:layout_margin="20dp"
        android:text="@string/btn_percent_text"
        android:textColor="@color/white"
        android:background="@drawable/btn_home_style"
        android:textSize="15sp"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>