<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".GainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_gain_crypto"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTotalCrypto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardTop"
        android:background="@drawable/border_radius_cards"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_card_total_gain"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginVertical="10dp" />

            <TextView
                android:id="@+id/viewTotalGain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/formBuy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardTotalCrypto"
        android:layout_margin="20dp"
        android:background="@drawable/border_radius_cards">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_input_coins"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/amountCoins"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/input_custom_styles"
                android:inputType="numberDecimal"
                android:hint="@string/placeholder"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_input_actual_price"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/etActualPrice"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/input_custom_styles"
                android:inputType="numberDecimal"
                android:hint="@string/placeholder"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_input_future_price"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/etFuturePrice"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/input_custom_styles"
                android:inputType="numberDecimal"
                android:hint="@string/placeholder"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCalcGain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formBuy"
        android:layout_margin="20dp"
        android:text="@string/btn_calc_gain"
        android:textColor="@color/white"
        android:background="@drawable/btn_home_style"
        android:textSize="15sp"
        android:textStyle="bold"/>


</androidx.constraintlayout.widget.ConstraintLayout>